--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div id="container">
     <div id="top">
 <a id="menu-link" href="#">关于我们 </a> <a id="menu-link" href="#">信件格式</a> <a id="menu-link" href="#">我们的邮箱</a> <a id="menu-link" href="#">更多活动</a>
-<img src="C:\Users\16872\Desktop\个人网页\大暑.jpg"width=100%/ >
+<img src="./大暑.jpg"width=100%/ >
 </div>
       <div id="leftnav">
       <h2>美好夏天回忆写作比赛</h2>
